Bug 250637 - new task: resource is kolab/mydata/calendar
Summary: new task: resource is kolab/mydata/calendar
Status: CLOSED FIXED
Alias: None
Product: KOrganizer Mobile
Classification: Unmaintained
Component: tasks (other bugs)
Version First Reported In: unspecified
Platform: Maemo 5 Linux
: HI major
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-09 10:38 UTC by Ludwig Reiter
Modified: 2010-09-24 13:49 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ludwig Reiter 2010-09-09 10:38:28 UTC
Version:           unspecified
OS:                Linux

Version:4.5~20100903.1171290-1maemo1.1171237 (enterprise5)
Fresh configured e5

Reproducible: Always

Steps to Reproduce:
1. Press on new task.


Actual Results:  
in the task creation dialog the resource calendar is shown.

Expected Results:  
should be tasks.

data lose, because tasks are created in the wrong folder.
Comment 1 Till Adam 2010-09-15 18:27:35 UTC
SVN commit 1175711 by tilladam:

Don't hardcode the mimetype filter for the collection combo to events.

BUG: 250637

 M  +2 -1      incidenceview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1175711
Comment 2 Felix Wolfsteller 2010-09-24 13:49:00 UTC
Works in 4:4.5~20100924.1178828-1maemo1.1177763 .