Don't hardcode the mimetype filter for the collection combo to events.

BUG: 250637

svn path=/trunk/KDE/kdepim/mobile/; revision=1175711